# olio-ohjelmointi

./: game.h
shakkikello/: mainwindow.cpp  mainwindow.h  mainwindow.ui
vko2teh1/: CMakeLists.txt  main.cpp
vko3teh1/: CMakeLists.txt  main.cpp
vko3teh3/: CMakeLists.txt  main.cpp
vko3teh4/: CMakeLists.txt  main.cpp
vko4/: CMakeLists.txt  asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
vko5_teh/: CMakeLists.txt  asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
vko6teh1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
vko6teh2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
